# iot-foundry-zephyr-endpoint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  prj.conf  west.yml
.github/workflows/: zephyr-ci.yml
boards/: arduino_nano_33_iot.conf  arduino_nano_33_iot.json  arduino_nano_33_iot.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.json  nrf54l15dk_nrf54l15_cpuapp.overlay
patches/: 20260126-165011-mctp_uart.c.patch  20260126-165011-mctp_uart.h.patch  README.md  apply_patches.sh  create_patch.sh
pldm-cmake/: CMakeLists.txt  pldm_config.h
pldm-cmake/compat/: endian.h  errno.h  limits.h  uchar.h
pldm-cmake/compat/asm/: byteorder.h
pldm-cmake/compat/asm-generic/: errno.h
samples/: example-pid-endpoint.json  example-profiled-motion-endpoint.json  example-simple-endpoint.json
src/: fru.c  main.c  mctp_control.c  mctp_control.h  platform.h  platform_effecter.c  platform_event.c  platform_log.c  platform_numsense.c  platform_pdr.c  platform_statesense.c  process_pldm.c  process_pldm.h
src/pdrs/: pdr_utils.c  pdr_utils.h  platform_defs.h
tests/: getpdr_follow.py  pldm_run_tests.json  run_mctp_tests.py  run_pldm_tests.py
tests/mctp_posix_uart_stub/src/: test_mctp_posix.c
tests/pldm_tb/: CMakeLists.txt  handle_pldm_adapter.c  main.c  tests.json
zephyr/: patches.yml
zephyr/patches/: 0001-subsys-pmci-mctp-dma-blocking-fix.patch
